--- a/Source/TrackingApplicationMainWindowUI.ui
+++ b/Source/TrackingApplicationMainWindowUI.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1290</width>
-    <height>760</height>
+    <height>872</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -172,6 +172,7 @@
       <string>Show</string>
      </property>
      <addaction name="actionCamera_List"/>
+     <addaction name="actionTimeline"/>
     </widget>
     <addaction name="menuShow"/>
    </widget>
@@ -203,12 +204,18 @@
   </widget>
   <widget class="QDockWidget" name="timelineDock">
    <property name="windowTitle">
-    <string>Time Line</string>
+    <string>Timeline</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>8</number>
    </attribute>
-   <widget class="QWidget" name="dockWidgetContents_2"/>
+   <widget class="QWidget" name="dockWidgetContents_2">
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <item>
+      <widget class="QCustomPlot" name="plotWidget" native="true"/>
+     </item>
+    </layout>
+   </widget>
   </widget>
   <action name="actionSettings">
    <property name="text">
@@ -245,7 +252,20 @@
     <string>Save Project</string>
    </property>
   </action>
+  <action name="actionTimeline">
+   <property name="text">
+    <string>Timeline</string>
+   </property>
+  </action>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QCustomPlot</class>
+   <extends>QWidget</extends>
+   <header>qcustomplot.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
